fixing spacing in footer

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -72,5 +72,5 @@ h2 {
 hr {
     border-color: $grey-color-light;
     opacity: 0.7;
-    margin-top: 5rem;
+    margin-bottom: 1.5rem;
 }
